# rag_books

./: .gitignore  pyproject.toml  pyrightconfig.json
src/: main.py  rag.py
src/encode/: embed.py
src/generate/: generate.py
src/preprocess/: embed.py  index.py  load.py  store.py
src/retrieve/: index.py  retrieve.py
test/: conftest.py  org_book.json  teacher_llm.py  test_qa.py  test_result_no_adaptations.json
test/eval_results/: test_result_2_stage_retrieval.json  test_result_adapted_prompt.json  test_result_no_adaptations.json
test/resources/: qa_pairs.json  qna_pairs.json  the_idiot.txt
